[package]
name = "pudding"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.3.11"
futures = "0.3.28"
rand = "0.8.5"

nym-sdk = { path ="../external/nym/sdk/rust/nym-sdk" }

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_millis = "0.1.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rust-crypto = "0.2.36"
p256 = "0.13.2"
rand_core = "0.6.4"
hex = "0.4.3"
num-bigint = { version = "0.4.3", features = ["serde", "rand"] }
getrandom = "0.2.10"
tor-llcrypto = "0.5.2"
curve25519-dalek = "3"
ed25519-dalek = "1.0"
x25519-dalek = "1.1"
rand_chacha = "0.2.2"
sha2 = "0.10.7"
zeroize = "1.6.0"
tracing-test = "0.2.4"
thiserror = "1.0.43"
anyhow = "1.0.72"
base64 = "0.21.2"
bimap = "0.6.3"
arrayvec = "0.7.4"
hmac = "0.12.1"
aes-gcm = "0.10.2"

